--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,18 +18,15 @@ h1, h2, h3, h4, h5, h6, p{
     background-size: cover;
 }
 .banner .form-bg{
-    width: 80%;
+    width: 100%;
     margin-left: auto;
 }
-.banner form table tr td input{
+.banner form input{
     width: 100%;
     height: 40px;
     font-size: 12px;
 }
-.banner form table tr td{
-    padding: 8px;
-}
-.banner form table textarea{
+.banner form textarea{
     width: 200%;
     height: 100px;
     font-size: 12px;
