--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,10 @@ h1, h2, h3, h4, h5, h6, p{
     width: 100%;
     height: 40px;
     font-size: 12px;
+    margin-bottom: 10px;
 }
 .banner form textarea{
-    width: 200%;
+    width: 100%;
     height: 100px;
     font-size: 12px;
 }
