--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ h1, h2, h3, h4, h5, h6, p{
     background-position: center center;
     background-size: cover;
 }
+.banner .form-bg{
+    width: 80%;
+}
 .banner form input{
     width: 100%;
     height: 40px;
